<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:title="@string/type_all" />
        <item
            android:id="@+id/nav_android"
            android:title="@string/type_android" />
        <item
            android:id="@+id/nav_ios"
            android:title="@string/type_ios" />
        <item
            android:id="@+id/nav_video"
            android:title="@string/type_video" />

        <item
            android:id="@+id/nav_welfare"
            android:title="@string/type_welfare" />
        <item
            android:id="@+id/nav_extar"
            android:title="@string/type_extar" />
        <item
            android:id="@+id/nav_front_end"
            android:title="@string/type_front_end" />
        <item
            android:id="@+id/nav_recommend"
            android:title="@string/type_recommend" />
        <item
            android:id="@+id/nav_app"
            android:title="@string/type_app" />
    </group>

</menu>
